--- a/app/assets/stylesheets/homepage/comments.css.scss
+++ b/app/assets/stylesheets/homepage/comments.css.scss
@@ -2,6 +2,7 @@
   border-bottom: 1px solid #ccc;
 }
 
-.comments-alternative {
+.comments-alternative,
+.comments-alternative p {
   font-size: 17px;
 }
