--- a/app/views/preorder/checkout.html.erb
+++ b/app/views/preorder/checkout.html.erb
@@ -13,6 +13,8 @@
 
       <p>
         Donations are going via <a href="http://www.abgefahren-ev.de/">Abgefahren e.V.</a> — a german hitchhiking club and a registered nonprofit behind Hitchwiki.org.
+        <br><br>
+        You can choose between 3 methods:
       </p>
 
       <br><br>
@@ -90,34 +92,53 @@
 
   <div class="payment-sepa">
     <h4>Bank transfer (SEPA)</h4>
-    <p><em>Easiest option for Europeans.</em>
-      <br><br>
+    <p>
+      <small class="payment-description">
+        Easiest option for Europeans.
+        <br>
+        It's an euro account in German bank.
+      </small>
 
       <span class="numberlines">
         IBAN: <span class="numbers">DE48430609671168211500</span><br>
-        BIC/Swift: <span class="numbers">GENODEM1GLS</span>
+        BIC/Swift: <span class="numbers">GENODEM1GLS</span><br>
       </span>
 
-      <br><br>
-      It's an euro account in German bank.
-      <br><br>
-      <em>Please note that it'll take a couple of days for these to register and become visible at the donation bar.</em>
+      <small class="payment-description">
+        <br>
+        <em>Please note that it'll take a couple of days for these to register and become visible at the donation bar.</em>
+      </small>
 
     </p>
   </div>
   <!-- /SEPA -->
 
-  <!--
   <div class="payment-bitcoin">
     <h4>Bitcoins</h4>
     <p>
-      <span class="numbers">123123</span>
-      <br><br>
-      <em>Please note that it'll take a couple of days for these to register and become visible at the donation bar.</em>
+      <span class="numberlines">
+        BTC: <span class="numbers"><small>1DYc4v98AmQMrXyhsoXUnY2koqD4UKehkK</small></span><br>
+        LTC: <span class="numbers"><small>LTRoWo1NmSn8CNRTk7No82QmDsJZZk5Nqk</small></span><br>
+      </span>
+      <br>
+      <a href="#" id="show_more_coins"><small>&raquo; Some more obscure coins</small></a>
+      <div class="numberlines" id="more_coins">
+        FRC: <span class="numbers"><small>1KMmztxmph2Cr3yWxzEivCDEZAfdCKrDJ7</small></span><br>
+        FTC: <span class="numbers"><small>6oM5qqgbcCqnWucQiSzWmDAuBiWetJ6sjQ</small></span><br>
+        MEC: <span class="numbers"><small>MM3zDohPvBzYMq4Q3YjfSfW9u4Yskr59Yx</small></span><br>
+        NMC: <span class="numbers"><small>N3EdwbiifM3oug23J5LF6V4EgR2ASeZWGL</small></span><br>
+        PPC: <span class="numbers"><small>PX1XgjcGGVQVUhqtJMJJcbKN88RmbJYzZa</small></span><br>
+        PTS: <span class="numbers"><small>Pk4AG377uq4aV6cKtzeTjBnRs5Y5YLEZuz</small></span><br>
+        XPM: <span class="numbers"><small>APC79uL2ckUxyVU1qQnDmTZCxbU4Um21Qj</small></span><br>
+      </div>
+
+      <small class="payment-description">
+        <br>
+        <em>Please note that it'll take a couple of days for these to register and become visible at the donation bar. You can double-confirm addresses <a href="http://hitchwiki.org/en/Hitchwiki:Coin_donations">from Hitchwiki</a>.</em>
+      </small>
     </p>
 
   </div>
-  -->
   <!-- /Bitcoins -->
 
   </div>
