Fix 'some more obscure coins'

--- a/app/views/preorder/checkout.html.erb
+++ b/app/views/preorder/checkout.html.erb
@@ -121,16 +121,23 @@
         LTC: <span class="numbers"><small>LTRoWo1NmSn8CNRTk7No82QmDsJZZk5Nqk</small></span><br>
       </span>
       <br>
-      <a href="#" id="show_more_coins"><small>&raquo; Some more obscure coins</small></a>
-      <div class="numberlines" id="more_coins">
-        FRC: <span class="numbers"><small>1KMmztxmph2Cr3yWxzEivCDEZAfdCKrDJ7</small></span><br>
-        FTC: <span class="numbers"><small>6oM5qqgbcCqnWucQiSzWmDAuBiWetJ6sjQ</small></span><br>
-        MEC: <span class="numbers"><small>MM3zDohPvBzYMq4Q3YjfSfW9u4Yskr59Yx</small></span><br>
-        NMC: <span class="numbers"><small>N3EdwbiifM3oug23J5LF6V4EgR2ASeZWGL</small></span><br>
-        PPC: <span class="numbers"><small>PX1XgjcGGVQVUhqtJMJJcbKN88RmbJYzZa</small></span><br>
-        PTS: <span class="numbers"><small>Pk4AG377uq4aV6cKtzeTjBnRs5Y5YLEZuz</small></span><br>
-        XPM: <span class="numbers"><small>APC79uL2ckUxyVU1qQnDmTZCxbU4Um21Qj</small></span><br>
-      </div>
+        <details class=''>
+          <summary><small>&raquo; Some more obscure coins</small></summary>
+          <div class="bread">
+              <div class="numberlines" id="more_coins">
+                  FRC: <span class="numbers"><small>1KMmztxmph2Cr3yWxzEivCDEZAfdCKrDJ7</small></span><br>
+                  FTC: <span class="numbers"><small>6oM5qqgbcCqnWucQiSzWmDAuBiWetJ6sjQ</small></span><br>
+                  MEC: <span class="numbers"><small>MM3zDohPvBzYMq4Q3YjfSfW9u4Yskr59Yx</small></span><br>
+                  NMC: <span class="numbers"><small>N3EdwbiifM3oug23J5LF6V4EgR2ASeZWGL</small></span><br>
+                  PPC: <span class="numbers"><small>PX1XgjcGGVQVUhqtJMJJcbKN88RmbJYzZa</small></span><br>
+                  PTS: <span class="numbers"><small>Pk4AG377uq4aV6cKtzeTjBnRs5Y5YLEZuz</small></span><br>
+                  XPM: <span class="numbers"><small>APC79uL2ckUxyVU1qQnDmTZCxbU4Um21Qj</small></span><br>
+              </div>  
+            </div>          
+        </details>
+            
+      <a href="#" id="show_more_coins"></a>
+      
 
       <small class="payment-description">
         <br>
