Add share texts

--- a/app/views/preorder/homepage/_key_points.html.erb
+++ b/app/views/preorder/homepage/_key_points.html.erb
@@ -4,11 +4,6 @@
       <h4>
         We are making hitchhikers-style hackaton in Turkey to make Hitchwiki better!
       </h4>
-      <!--
-      <p>
-         <em>Lorem ipsum</em>
-      </p>
-    -->
     </div>
   </div>
 </div>
@@ -33,7 +28,7 @@
         This time we will gather in Turkey and work on Hitchwiki <em>full time.</em> Previously we've done volunteering alongside our other jobs and been quite restricted time and energy wise.
 
         <br><br>
-        <em>We need your help to cover the costs (rent, food, etc ...) during our hackathon.</em>
+        <em>We need your help to cover the costs (rent, food, etc ...) during our coding event, or "hackathon" as we call it.</em>
         <br><br>
 
         <%= render 'preorder/homepage/history' %>
