--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,24 @@
     <title><%= Settings.product_name %></title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="description" content="<%= Settings.share_text %>">
+    <meta property="fb:app_id" content="139879862696959">
+    <meta property="og:site_name" content="<%= Settings.product_name %>">
+    <meta property="og:title" content="<%= Settings.product_name %>">
+    <meta property="og:description" content="<%= Settings.share_text %>">
+    <meta property="og:url" content="<%= encoded_root_url %>">
+    <meta property="og:image" content="/assets/lisbon-roof.jpg">
+    <meta property="og:type" content="website">
+    <meta name="twitter:title" content="<%= Settings.product_name %>">
+    <meta name="twitter:description" content="<%= Settings.share_text %>">
+    <meta name="twitter:url" content="<%= encoded_root_url %>">
+    <meta name="twitter:image" content="/assets/lisbon-roof.jpg">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application" %>
     <link href="//fonts.googleapis.com/css?family=Open+Sans&amp;subset=latin-ext,latin,cyrillic,greek" rel="stylesheet" type="text/css">
