--- a/app/views/preorder/_header.html.erb
+++ b/app/views/preorder/_header.html.erb
@@ -1,5 +1,5 @@
 <div id="header">
   <div class="wrapper clearfix">
-    <h1 id="lockitron_header"><a href="/"><img src="/images/logo.png" alt="Hitchwiki"></a></h1>
+    <h1 id="lockitron_header"><a href="/"><%= image_tag("/images/logo.png", alt: "Hitchwiki") %></a></h1>
   </div>
 </div>
