@guaka's endorsement, asset path fix, production script

--- a/app/views/preorder/checkout.html.erb
+++ b/app/views/preorder/checkout.html.erb
@@ -102,6 +102,7 @@
       <span class="numberlines">
         IBAN: <span class="numbers">DE48430609671168211500</span><br>
         BIC/Swift: <span class="numbers">GENODEM1GLS</span><br>
+        Name: <span class="numbers">Abgefahren e.V.</span><br>
       </span>
 
       <small class="payment-description">
