--- a/app/assets/stylesheets/homepage/comments.css.scss
+++ b/app/assets/stylesheets/homepage/comments.css.scss
@@ -1,8 +1,7 @@
 #comments {
   border-bottom: 1px solid #ccc;
-}
-
-.comments-alternative,
-.comments-alternative p {
-  font-size: 17px;
+  .comments-alternative {
+    font-size: 16px;
+    padding-bottom: 20px;
+  }
 }
