--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,17 +11,17 @@
     <meta property="og:title" content="<%= Settings.product_name %>">
     <meta property="og:description" content="<%= Settings.share_text %>">
     <meta property="og:url" content="<%= encoded_root_url %>">
-    <meta property="og:image" content="/assets/lisbon-roof.jpg">
+    <meta property="og:image" content="http://hitchwiki.org/en/images/en/5/52/Hw-sticker-7x7cm%2B2mm-bleed.jpg">
     <meta property="og:type" content="website">
     <meta name="twitter:title" content="<%= Settings.product_name %>">
     <meta name="twitter:description" content="<%= Settings.share_text %>">
     <meta name="twitter:url" content="<%= encoded_root_url %>">
-    <meta name="twitter:image" content="/assets/lisbon-roof.jpg">
+    <meta name="twitter:image" content="http://hitchwiki.org/en/images/en/5/52/Hw-sticker-7x7cm%2B2mm-bleed.jpg">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <script src="http://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="http://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application" %>
