link to HW from history

--- a/app/views/preorder/homepage/_history.html.erb
+++ b/app/views/preorder/homepage/_history.html.erb
@@ -12,7 +12,7 @@
         </li>
 
         <li>
-          In May 2013 we gathered at Kasper's house in Brussels and fixed plenty of bugs and created the <a href="http://hitchwiki.org/en/">current new layout</a>. We also started <a href="http://nomadwiki.org/">Nomadwiki</a>.
+          In May 2013 we gathered at <a href="http://hitchwiki.org/en/User:Guaka">Kasper's house in Brussels</a> and fixed plenty of bugs and created the <a href="http://hitchwiki.org/en/">current new layout</a>. We also started <a href="http://nomadwiki.org/">Nomadwiki</a>.
           <br><br>
         </li>
 
