Better english from Dan

--- a/app/views/preorder/homepage/_stats.html.erb
+++ b/app/views/preorder/homepage/_stats.html.erb
@@ -20,7 +20,7 @@
       <h3>Hitchwiki Hackathon</h3>
       <br>
       <h4>
-        We will work on new Hitchwiki for 5-8 weeks in Turkey.
+        We will work on a new Hitchwiki for 5-8 weeks in Turkey.
       </h4>
       <p>
          <em>Help us cover our expenses.</em>
@@ -83,7 +83,7 @@
       <p id="note">
         Bank transfers, bitcoins & credit cards.
         <br><br>
-        Note that the donation bar is updated manually for other than credit cards and it might take a short while before your donation shows up.
+          Note that the donation bar is updated manually for anything other than credit cards, so it might take a short while before your donation shows up. 
       </p>
     </div>
 
