--- a/app/views/preorder/homepage/_key_points.html.erb
+++ b/app/views/preorder/homepage/_key_points.html.erb
@@ -16,7 +16,7 @@
 
         Behind our beloved <a href="http://hitchwiki.org/">Hitchwiki</a> is a small (but enthusiastic!) tech team. Although we are able to maintain the site and fix problems that occur every now and then, developing new features has always been a bit tricky.
         <br><br>
-        In recent years Hitchwiki has grown quite a lot, we have over 100 000 unique visitors a month. Due to popularity we've felt for quite a while that we should improve the site.
+          In recent years Hitchwiki has grown quite a lot, and now we have over 100,000 unique visitors a month. Due to this popularity, we've felt for quite a while that we should improve the site. 
         <br><br>
         Our plan is to combine Wiki with Maps into one view:
         <br><br>
@@ -46,7 +46,7 @@
       <div class="point_copy half left">
         <h5>Currently</h5>
         <ul class="bread">
-          <li>Hitchiwiki <a href="http://hitchwiki.org/maps/">Map</a> and <a href="http://hitchwiki.org/en/">Wiki</a> have seperate and duplicate content. It's annoying to check both before your hitching trip and to find where the best information is. At the wiki you don't get a visual idea where the locations exactly are.</li>
+          <li>Hitchiwiki <a href="http://hitchwiki.org/maps/">Map</a> and <a href="http://hitchwiki.org/en/">Wiki</a> have seperate and duplicate content. It's annoying to check both before your hitching trip and to find where the best information is. On the wiki, you don't get a visual idea of where the locations exactly are. </li>
           <li>The hitchiwiki project is now really messy, nothing is structured, it is therefore hard to build new features.</li>
           <li>Editing wiki can be complicated, and you need time to understand how it works before you can contribute.</li>
           <li>Hitchwiki is written in over 9 languages, but the data is separated so it's really hard to translate from one to the other and to see where the good information is.</li>
@@ -57,7 +57,7 @@
         <h5>Solutions</h5>
         <ul class="bread">
             <li>We want to bring the map and the wiki together, in a way that spots from the wiki and the map are visible in one view, where you could also see comments, waiting times, ratings.</li>
-            <li>The goal is to separate each location into its own block and show it on the map. If we achieve this we would have a really easy to use system, ready for great new features.</li>
+            <li>The goal is to separate each location into its own block and show it on the map. If we achieve this we would have a really easy-to-use system, ready for great new features.</li>
             <li>We want to make editing Hitchwiki content as easy as posting a comment on a blog.</li>
             <li>We plan to facilitate access to info in different languages, by displaying a list of available languages for each hitchhiking spot and providing an easy way to translate it to a new language.</li>
             <li>We aim to make the whole new wiki work on any kind of device.</li>
@@ -95,7 +95,7 @@
       </div>
       <div class="point_copy half right">
         <br><hr/><br>
-        <p class="bread">We are two now but we're also open for talented and experienced developers joining us (MediaWiki, PHP, JavaScript). This time we would like to form a tiny and effective team of people who could contribute several weeks of full time work for this, rather than have guests visiting and helping for shorter times (as we've had before). Smaller team (or just two of us) is also easier to coordinate. If you'd be interested to come, please <a href="#contact">contact us</a> and tell about yourself ! You're also always welcome to <a href="https://github.com/Hitchwiki/">send</a> smaller patches and participate in discussions.</p>
+        <p class="bread">We are team of two at the moment but we're also open for talented and experienced developers joining us (MediaWiki, PHP, JavaScript). This time we would like to form a tiny and effective team of people who could contribute several weeks of full time work for this, rather than have guests visiting and helping for shorter times (as we've had before). Smaller team (or just two of us) is also easier to coordinate. If you'd be interested to come, please <a href="#contact">contact us</a> and tell about yourself! You're also always welcome to <a href="https://github.com/Hitchwiki/">send</a> smaller patches and participate in discussions.</p>
       </div>
       <div class="clearfix"></div>
 
