slightly improve English on front page

--- a/app/views/preorder/homepage/_key_points.html.erb
+++ b/app/views/preorder/homepage/_key_points.html.erb
@@ -2,7 +2,7 @@
   <div class="wrapper">
     <div class="point_copy right darkbox">
       <h4>
-        We are making hitchhikers-style hackaton in Turkey to make Hitchwiki better!
+        We will organize a hitchhiker-style hackaton in Turkey to make Hitchwiki better!
       </h4>
     </div>
   </div>
@@ -12,20 +12,20 @@
   <div class="wrapper">
       <div class="point_copy full">
 
-        <h4><em>Dear friends and hitchhikers family!</em></h4>
+        <h4><em>Dear friends and family of hitchhikers!</em></h4>
 
-        Behind our beloved <a href="http://hitchwiki.org/">Hitchwiki</a> is a small (but enthusiastic!) tech team. Although we are able to maintain the site and fix problems that occur every now and then, developing new features has always been a bit tricky.
+        Behind our beloved <a href="http://hitchwiki.org/">Hitchwiki</a> stands a small (but enthusiastic!) tech team. Although we are able to maintain the site and fix problems that occur every now and then, developing new features has always been a bit tricky.
         <br><br>
           In recent years Hitchwiki has grown quite a lot, and now we have over 100,000 unique visitors a month. Due to this popularity, we've felt for quite a while that we should improve the site. 
         <br><br>
-        Our plan is to combine Wiki with Maps into one view:
+        Our plan is to combine the Wiki and Maps into one view:
         <br><br>
         <br>
         <%= link_to(image_tag("hitchwiki_2015_pre.png", alt: "New Hitchwiki", width: "100%"), asset_path("hitchwiki_2015_pre.png")) %>
         <br>
         <br><br>
 
-        This time we will gather in Turkey and work on Hitchwiki <em>full time.</em> Previously we've done volunteering alongside our other jobs and been quite restricted time and energy wise.
+        This time we will gather in Turkey and work on Hitchwiki <em>full time.</em> Previously we've volunteered alongside our other jobs and were quite restricted time and energy-wise.
 
         <br><br>
         <em>We need your help to cover the costs (rent, food, etc ...) during our coding event, or "hackathon" as we call it.</em>
