--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,6 @@
     <meta property="og:title" content="<%= Settings.product_name %>">
     <meta property="og:description" content="<%= Settings.share_text %>">
     <meta property="og:url" content="<%= encoded_root_url %>">
-    <meta property="og:image" content="http://hitchwiki.org/en/images/en/5/52/Hw-sticker-7x7cm%2B2mm-bleed.jpg">
     <meta property="og:image" content="<%= encoded_root_url[0..-1] %><%= asset_path("lisbon-roof.jpg") %>">
     <meta property="og:type" content="website">
     <meta name="twitter:title" content="<%= Settings.product_name %>">
@@ -21,14 +20,14 @@
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="http://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="http://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application" %>
     <link href="//fonts.googleapis.com/css?family=Open+Sans&amp;subset=latin-ext,latin,cyrillic,greek" rel="stylesheet" type="text/css">
-    <link rel="shortcut icon" href="http://hitchwiki.org/favicon.png" type="image/png" />
-    <link rel="bookmark icon" href="http://hitchwiki.org/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="//hitchwiki.org/favicon.png" type="image/png" />
+    <link rel="bookmark icon" href="//hitchwiki.org/favicon.png" type="image/png" />
   </head>
   <!--[if lt IE 9 ]><body class="lt-ie9"><![endif]-->
   <!--[if (gt IE 9)|!(IE)]><!--> <body><!--<![endif]-->
