--- a/app/views/preorder/homepage/_comments.html.erb
+++ b/app/views/preorder/homepage/_comments.html.erb
@@ -24,7 +24,7 @@
 
       <div class="comments-alternative">
         <br>
-        <p>You can also send us email <img src="http://hitchwiki.org/wordpress/wp-content/plugins/hitchwiki/img/contact.png" alt="Contact us" />, <a target="_blank" href="http://hitchwiki.org/chat/">chat</a> with us or <a target="_blank" href="http://hitchwiki.org/groups/hitchwiki/">comment at Hitchwiki.org</a>.</p>
+        <p>You can also send us email <%= link_to(image_tag("contact.png", alt: "contact us"), "http://hitchwiki.org/contact/") %>, <a target="_blank" href="http://hitchwiki.org/chat/">chat</a> with us or <a target="_blank" href="http://hitchwiki.org/groups/hitchwiki/">comment at Hitchwiki.org</a>.</p>
       </div>
 
     </div>
