--- a/app/views/preorder/homepage/_press.html.erb
+++ b/app/views/preorder/homepage/_press.html.erb
@@ -1,7 +1,7 @@
 <div id="contact">
   <ul class="wrapper clearfix">
     <li><a href="https://github.com/Hitchwiki/">GitHub</a></li>
-    <li><img src="http://hitchwiki.org/wordpress/wp-content/plugins/hitchwiki/img/contact.png" alt="Contact us"></li>
+    <li><%= link_to(image_tag("contact.png", alt: "contact us"), "http://hitchwiki.org/contact/") %></li>
     <li><a href="http://hitchwiki.org/chat/">a chat room</a> <small>(be patient, we are not there 24/7)</small></li>
     <li><a href="http://www.mikaelkorpela.fi/">Contact Mikael</a></li>
     <li><a href="http://www.abgefahren-ev.de/">Abgefahren e.V.</a></li>
